--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,29 @@
 }
 
 body{
-  background: url("../media/backgroundTexture.jpg");
+  background: url("../media/Simple-space.png") 0 0 no-repeat, url("../media/Simple-space-noPlanet.png") center center;
+}
+
+.testDiv{
+  padding: 10px;
+}
+
+/*scrollbar*/
+::-webkit-scrollbar {
+    width: 15px;
+    background-color: rgba(0,0,0, 0.5);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0, 0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 8px rgba(0,0,0, 0.6);
+    background-color: rgba(0,0,0, 0.6);
 }
 
 /*Header and friends*/
@@ -64,17 +86,26 @@ nav ul li a:hover{
   margin-left: auto;
   margin-right: auto;
 
-  background: rgba(128, 182, 255, 0.95);
+  background: rgba(8, 154, 36, 0.4);
 
   padding: 10px;
 }
-
+.notGreen{
+  padding: 0px;
+  background-color: transparent!important;
+}
+img{
+  position: relative;
+  left: 15%;
+}
 /*content*/
 .subtext{
-  color: rgb(87, 87, 87);
+  color: rgb(0, 0, 0);
 
   position: relative;
-  top: 10px;
+  top: 6px;
+
+  font-weight: bold;
 
   vertical-align: sub;
 }
@@ -85,25 +116,25 @@ h1, .arrow{
 }
 h1 .arrow{
   display: inline-block;
-  width: 37.5px;
-  height: 37.5px;
+  width: 39px;
+  height: 38px;
 
   margin-left: 10px;
 
-  background: url("../media/arrowSprite.png") no-repeat top right;
-  background-size: 75px;
+  background: url("../media/arrowSpriteAlien.png") no-repeat top right;
+  background-size: 80px;
 }
 h1:hover .arrow{
-  background: url("../media/arrowSprite.png") no-repeat bottom left;
-  background-size: 75px;
+  background: url("../media/arrowSpriteAlien.png") no-repeat bottom left;
+  background-size: 80px;
 }
 h1.open .arrow{
-  background: url("../media/arrowSprite.png") no-repeat bottom right;
-  background-size: 75px;
+  background: url("../media/arrowSpriteAlien.png") no-repeat bottom right;
+  background-size: 80px;
 }
 h1.open:hover .arrow{
-  background: url("../media/arrowSprite.png") no-repeat top left;
-  background-size: 75px;
+  background: url("../media/arrowSpriteAlien.png") no-repeat top left;
+  background-size: 80px;
 }
 /*End of! H1 open and closing arrows css*/
 
@@ -118,11 +149,11 @@ h1.open:hover .arrow{
   width: 40px;
   padding-left: 5px;
 
-  background: rgb(101, 165, 249);
+  background: rgba(8, 154, 36, 0.3);
 }
 #tableContainer{
   width: auto;
-  height: 330px;
+  height: 352px;
 
   top: 0px;
 
@@ -135,7 +166,7 @@ h1.open:hover .arrow{
 table{
   display: inline-block;
 
-  padding-right: 8%;
+  padding-right: 7%;
   padding-bottom: 25px;
 
   font-size: 17pt;
@@ -157,9 +188,101 @@ input{
 #practiceTables{
   display: none;
 }
+
+/*Test css (oefenen)*/
+.test{
+  width: 40%;
+
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+
+  height: 140px;
+
+  /*position: relative;
+  bottom: 250px;*/
+}
+
+.test input{
+  width: 200px;
+  height: 40px;
+
+  margin: 0px;
+
+  text-align: center;
+  border: 0px;
+}
+.test input:last-child{
+  border: 1px solid black;
+}
+
+.questionContainer{
+  position: relative;
+  left: 70px;
+  bottom: 350px;
+}
+
+/*progress bar*/
+.fuelStation{
+  position: relative;
+  left: -191px;
+  bottom: 38px;
+}
+.fuelProgress{
+  position: relative;
+  left: -360px;
+  bottom: 61px;
+}
+.progressContainer {
+  position: relative;
+  bottom: 231px;
+
+  margin-top: 60px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+.vertical {
+  display: inline-block;
+  width: 150px;
+  height: 40px;
+  -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
+  transform: rotate(-90deg);
+
+  position: relative;
+  right: 50px;
+}
+.vertical {
+  box-shadow: inset 0px 4px 6px #ccc;
+
+}
+/*Bootstrap overrides*/
+.progress-bar {
+  box-shadow: inset 0px 4px 6px rgba(100,100,100,0.6);
+
+}
+/*end progress-bar*/
+.btn-primary{
+  width: 90px;
+}
+
+#download{
+  display: block;
+
+  margin-top: 10px;
+  width: 200px;
+}
+
+#checkToets, #closeToets{
+  width: 140px;
+  height: 60px;
+
+  position: relative;
+  left: 400px;
+}
+
 /*footer*/
 footer{
-  margin-top: 15px;
+  /*margin-top: 15px;*/
   padding: 10px;
 
   clear: both;
@@ -208,6 +331,9 @@ footer{
   .centerContent{
     width: 100%;
   }
+  img{
+    left: 0px;
+  }
 }
 @media screen and (max-width: 640px){
   #oefenen, #toetsen{
@@ -216,63 +342,4 @@ footer{
 
     width: 300px;
   }
-}
-
-.test{
-  width: 40%;
-
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
-
-  height: 140px;
-}
-
-.test input{
-  width: 200px;
-  height: 40px;
-
-  margin: 0px;
-
-  text-align: center;
-  border: 0px;
-}
-.test input:last-child{
-  border: 1px solid black;
-}
-
-.questionContainer{
-  position: relative;
-  left: 70px;
-  bottom: 121px;
-}
-
-/*progress bar*/
-.progressContainer {
-  margin-top: 60px;
-  padding-top: 20px;
-  padding-bottom: 30px;
-
-  position: relative;
-}
-.vertical {
-  display: inline-block;
-  width: 150px;
-  height: 40px;
-  -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
-  transform: rotate(-90deg);
-
-  position: relative;
-  right: 50px;
-}
-.vertical {
-  box-shadow: inset 0px 4px 6px #ccc;
-}
-/*Bootstrap overrides*/
-.progress-bar {
-  box-shadow: inset 0px 4px 6px rgba(100,100,100,0.6);
-}
-/*end progress-bar*/
-.btn-primary{
-  width: 90px;
 }
